<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:animateLayoutChanges="true">

    <FrameLayout
        android:id="@+id/appTitleFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ch.smartkraft.components.views.FontAppCompatTextView
            android:id="@+id/appTitle"
            style="@style/TextLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingHorizontal="24dp"
            android:paddingVertical="@dimen/app_padding_vertical"
            android:text="@string/select_app" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/appHideLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="?attr/primaryColorInverseTrans80"
        android:clickable="true"
        android:focusable="true"
        android:gravity="end|center_vertical"
        android:paddingVertical="@dimen/app_padding_vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <!-- 1. Pin/Unpin -->
        <ch.smartkraft.components.views.FontAppCompatTextView
            android:id="@+id/appPin"
            style="@style/TextSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:text="@string/pin"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/pin_off" />

        <!-- 2. Lock/Unlock -->
        <ch.smartkraft.components.views.FontAppCompatTextView
            android:id="@+id/appLock"
            style="@style/TextSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:text="@string/lock"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/padlock_off" />

        <!-- 3. Hide/Show -->
        <ch.smartkraft.components.views.FontAppCompatTextView
            android:id="@+id/appHide"
            style="@style/TextSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:text="@string/hide"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/visibility_off" />

        <!-- 4. Rename -->
        <ch.smartkraft.components.views.FontAppCompatTextView
            android:id="@+id/appRename"
            style="@style/TextSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:text="@string/rename"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/ic_rename" />

        <!-- 5. Tag -->
        <ch.smartkraft.components.views.FontAppCompatTextView
            android:id="@+id/appTag"
            style="@style/TextSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:text="@string/tag"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/ic_tag" />

        <!-- 6. Info -->
        <ch.smartkraft.components.views.FontAppCompatTextView
            android:id="@+id/appInfo"
            style="@style/TextSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:text="@string/info"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/ic_info" />

        <!-- 7. Delete -->
        <ch.smartkraft.components.views.FontAppCompatTextView
            android:id="@+id/appDelete"
            style="@style/TextSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:text="@string/delete"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/ic_delete" />

        <!-- 8. Close -->
        <ch.smartkraft.components.views.FontAppCompatTextView
            android:id="@+id/appClose"
            style="@style/TextSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="2dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:text="@string/close"
            android:textSize="12sp"
            app:drawableTopCompat="@drawable/ic_close" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/appRenameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="?attr/primaryColorInverseTrans80"
        android:clickable="true"
        android:focusable="true"
        android:gravity="end|center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="gone">

        <ch.smartkraft.components.views.FontEditText
            android:id="@+id/appRenameEdit"
            style="@style/TextLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:autofillHints="name"
            android:background="@null"
            android:gravity="center_vertical"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingVertical="@dimen/app_padding_vertical"
            android:textColorHint="?attr/primaryColorTrans50"
            tools:ignore="LabelFor" />

        <ImageView
            android:id="@+id/appSaveRename"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/rename"
            android:paddingHorizontal="2dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_tick" />

        <ImageView
            android:id="@+id/appSaveCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="18dp"
            android:contentDescription="@string/cancel"
            android:paddingHorizontal="2dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_close" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/appTagLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="?attr/primaryColorInverseTrans80"
        android:clickable="true"
        android:focusable="true"
        android:gravity="end|center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="gone">

        <ch.smartkraft.components.views.FontEditText
            android:id="@+id/appTagEdit"
            style="@style/TextLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:autofillHints="name"
            android:background="@null"
            android:gravity="center_vertical"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:maxLines="1"
            android:paddingVertical="@dimen/app_padding_vertical"
            android:textColorHint="?attr/primaryColorTrans50"
            tools:ignore="LabelFor" />

        <ch.smartkraft.components.views.FontAppCompatTextView
            android:id="@+id/appSaveTag"
            style="@style/TextSmallBold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:text="@string/tag"
            android:textAllCaps="true" />

    </LinearLayout>

</FrameLayout>