<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:background="?attr/primaryShadeDarkColor">

    <!-- Search Bar positioned at the top -->
    <LinearLayout
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        android:paddingVertical="10dp">

        <ch.smartkraft.components.views.FontSearchView
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:imeOptions="actionSearch"
            android:paddingHorizontal="0dp"
            android:paddingVertical="0dp"
            app:closeIcon="@drawable/ic_close"
            app:iconifiedByDefault="false"
            app:queryBackground="@null"
            app:queryHint="___"
            app:searchIcon="@drawable/ic_search"
            app:theme="@style/AppSearchText" />

        <ImageView
            android:id="@+id/workApps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/advanced_settings_app_info_title"
            android:paddingHorizontal="5dp"
            android:paddingVertical="8dp"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@drawable/work_profile"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <ImageView
            android:id="@+id/privateApps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/advanced_settings_app_info_title"
            android:paddingHorizontal="5dp"
            android:paddingVertical="8dp"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@drawable/private_profile_off"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <ImageView
            android:id="@+id/systemApps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/advanced_settings_app_info_title"
            android:paddingHorizontal="5dp"
            android:paddingVertical="8dp"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@drawable/system_profile"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />

        <ImageView
            android:id="@+id/searchSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/advanced_settings_app_info_title"
            android:paddingHorizontal="5dp"
            android:paddingVertical="8dp"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_contacts"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp" />
    </LinearLayout>

    <ch.smartkraft.components.views.FontAppCompatTextView
        android:id="@+id/clearHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchContainer"
        android:layout_alignParentEnd="true"
        android:paddingHorizontal="18dp"
        android:paddingVertical="4dp"
        android:textSize="16sp"
        android:visibility="gone"
        app:theme="@style/AppSearchText" />

    <!-- Drawer button and tip, positioned below search container -->
    <ch.smartkraft.components.views.FontAppCompatTextView
        android:id="@+id/appDrawerTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/clearHomeButton"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/app_drawer_tips"
        android:textColor="?attr/primaryColor"
        android:textSize="16sp"
        android:visibility="gone" />

    <ViewSwitcher
        android:id="@+id/menuView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/appDrawerTip"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:clipToPadding="false">

        <!-- RecyclerView positioned below the Drawer TextViews -->
        <ch.smartkraft.components.views.FontRecyclerView
            android:id="@+id/appsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fadingEdgeLength="20dp"
            android:padding="0dp"
            android:requiresFadingEdge="vertical"
            android:scrollbars="none" />

        <ch.smartkraft.components.views.FontRecyclerView
            android:id="@+id/contactsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:fadingEdgeLength="20dp"
            android:padding="0dp"
            android:requiresFadingEdge="vertical"
            android:scrollbars="none" />
    </ViewSwitcher>

    <FrameLayout
        android:id="@+id/sidebar_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:visibility="gone">

        <ch.smartkraft.pantherlauncher.ui.components.AZSidebarView
            android:id="@+id/azSidebar"
            android:layout_width="32dp"
            android:layout_height="match_parent" />
    </FrameLayout>


    <!-- List Empty Hint, center aligned -->
    <ch.smartkraft.components.views.FontAppCompatTextView
        android:id="@+id/listEmptyHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/drawer_list_empty_hint"
        android:textSize="20sp" />

</RelativeLayout>